--- a/website/styles.css
+++ b/website/styles.css
@@ -88,3 +88,21 @@ input, select {
 textarea, .note-editor.note-frame {
   margin: 25px 0;
 }
+.smtp-setting-instruction {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+}
+
+.smtp-setting-instruction td, .smtp-setting-instruction th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+.smtp-setting-instruction tr:nth-child(even){background-color: #f2f2f2;}
+.smtp-setting-instruction tr:hover {background-color: #ddd;}
+.smtp-setting-instruction th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+}
